@@ -1,3 +1,3 @@
 <?php
-define('PLX_CONFIG_PATH', 'data/configuration/');
+const PLX_CONFIG_PATH = 'data/configuration/';
 ?>
