@@ -1,10 +1,9 @@
 <?php
-define('PLX_ROOT', './');
-define('PLX_CORE', PLX_ROOT.'core/');
-include PLX_ROOT.'config.php';
-include PLX_CORE.'lib/config.php';
+const PLX_ROOT = './';
+const PLX_CORE = PLX_ROOT .'core/';
 
-define('PLX_FEED', true);
+include(PLX_ROOT.'config.php');
+include(PLX_CORE.'lib/config.php');
 
 # On verifie que PluXml est installé
 if(!file_exists(path('XMLFILE_PARAMETERS'))) {
@@ -13,13 +12,13 @@ if(!file_exists(path('XMLFILE_PARAMETERS'))) {
 }
 
 # On inclut les librairies nécessaires
-include PLX_CORE.'lib/class.plx.date.php';
-include PLX_CORE.'lib/class.plx.glob.php';
-include PLX_CORE.'lib/class.plx.utils.php';
-include PLX_CORE.'lib/class.plx.record.php';
-include PLX_CORE.'lib/class.plx.motor.php';
-include PLX_CORE.'lib/class.plx.feed.php';
-include PLX_CORE.'lib/class.plx.plugins.php';
+include(PLX_CORE.'lib/class.plx.date.php');
+include(PLX_CORE.'lib/class.plx.glob.php');
+include(PLX_CORE.'lib/class.plx.utils.php');
+include(PLX_CORE.'lib/class.plx.record.php');
+include(PLX_CORE.'lib/class.plx.motor.php');
+include(PLX_CORE.'lib/class.plx.feed.php');
+include(PLX_CORE.'lib/class.plx.plugins.php');
 
 # Creation de l'objet principal et lancement du traitement
 $plxFeed = plxFeed::getInstance();
