@@ -1,18 +1,19 @@
 <?php
-define('PLX_ROOT', './');
-define('PLX_CORE', PLX_ROOT.'core/');
-include PLX_ROOT.'config.php';
-include PLX_CORE.'lib/config.php';
+const PLX_ROOT = './';
+const PLX_CORE = PLX_ROOT .'core/';
+
+include(PLX_ROOT.'config.php');
+include(PLX_CORE.'lib/config.php');
 
 # On démarre la session
 session_start();
 
 # On inclut les librairies nécessaires
-include PLX_CORE.'lib/class.plx.timezones.php';
-include PLX_CORE.'lib/class.plx.date.php';
-include PLX_CORE.'lib/class.plx.glob.php';
-include PLX_CORE.'lib/class.plx.utils.php';
-include PLX_CORE.'lib/class.plx.token.php';
+include(PLX_CORE.'lib/class.plx.timezones.php');
+include(PLX_CORE.'lib/class.plx.date.php');
+include(PLX_CORE.'lib/class.plx.glob.php');
+include(PLX_CORE.'lib/class.plx.utils.php');
+include(PLX_CORE.'lib/class.plx.token.php');
 
 # Chargement des langues
 $lang = DEFAULT_LANG;
