@@ -5,6 +5,7 @@
 [+] #207 Afficher/masquer le chapeau et les tags d'un article dans l'administration en CSS3 au lieu d'utiliser du JS (bazooka07, Stéphane, P3ter)
 [+] #216 Refacto de la fonction plxUtils::printArea() (bazooka07)
 [+] #305 Remplacement dirname(__FILE__) par __DIR__ dans l'admin et le thème par défaut (P3ter)
+[+] #309 Remplacement de define() par const (bazooka07)
 [+] #312 En présence d'une homepage statique, le lien "archive total" redirige vers le blog (je-evrard, bazooka07, P3ter)
 [+] #312 Remplacement de la fonction str_replace() par strtr() pour les liens vers les pages archives (bazooka07, P3ter)
 FIX #302 Renvoie vers index.php si un paramètre est inconnu dans l'URI  (bazooka07)
